Removed lombok, updated to JDK14
JDK14 preview features are in use. Records are used to replace anything with only private final fields and public getters for everything. New style switch expressions are migrated in some places.